--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="container">
        <div class="navbar">
          <div class="logo">
-    <img src="images/WeSchool_transparent.png" width="125px">
+    <img src="WeSchool_transparent.png" width="125px">
 </div>
 <nav>
     <ul id="MenuItems">
